infrastructure/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-project
  namespace: test-project
  labels:
    app: test-project
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: test-project
