infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-project
  namespace: test-project
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.xchains.dev
      secretName: xchains-origin-tls
  rules:
    - host: test.xchains.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-project
                port:
                  number: 80
